@@ -1,3 +1,9 @@
+2007-06-06  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Linker/CustomResolver.cs:
+		When a method is not found, go down
+		the class hierarchy to find it.
+
 2007-06-05  Jb Evain  <jbevain@novell.com>
 
 	* Tests/Mono.Linker.Tests/IntegrationTestFixture.cs:
